<?xml version="1.0"?>
<package format="3">
  <name>atlas_interfaces</name>
  <version>0.0.0</version>
  <description>Atlas custom interfaces</description>
  <maintainer email="aditya@todo.todo">aditya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>